[package]
name = "turbocheck"
version = "0.5.6"
authors = ["Phillip Cloud"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
enumset = "1"
futures = "0.3"
humantime = "2"
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "fs"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
typed-builder = "0.9"
urlshortener = "3"
url = { version = "2", features = ["serde"] }
