[package]
name = "turbocheck"
version = "0.6.0"
authors = ["Phillip Cloud"]
edition = "2018"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
enumset = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
humantime = { version = "2", default-features = false }
percent-encoding = { version = "2", default-features = false }
regex = { version = "1", default-features = false, features = ["perf", "unicode"] }
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
structopt = { version = "0.3", default-features = false }
strum = { version = "0.20", default-features = false }
strum_macros = { version = "0.20", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "fs", "signal"] }
toml = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
typed-builder = { version = "0.9", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }

[dependencies.tracing-subscriber]
version = "0.2"
default-features = false
features = ["env-filter", "smallvec", "ansi"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
serde_json = "1"

[package.metadata.release]
disable-push = false
disable-tag = true
disable-publish = true
tag-prefix = ""
no-dev-version = true
