[package]
name = "twilio_concurrent"
version = "0.1.0"
authors = ["Phillip Cloud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
typed-builder = "0.9"
